removed all platform-jdk* profiles and replaced all definitions with platform-jdk11 definitions -- still there non-modularized dependencies causing the build to fail compiling